Add Capacitor iOS support with GitHub Actions preparation

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,14 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Capacitor
+ios/App/Pods/
+ios/App/App.xcworkspace/xcuserdata/
+ios/App/*.xcodeproj/xcuserdata/
+ios/App/*.xcodeproj/project.xcworkspace/xcuserdata/
+ios/App/build/
+android/app/build/
+android/build/
+android/.gradle/
+android/.idea/
